--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,46 @@
   <link rel="stylesheet" href="/Content/app.css">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">COMP229</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/home"><i class="fas fa-house-damage fa-lg"></i> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about"><i class="fas fa-info fa-lg"></i> About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/projects"><i class="fas fa-cogs fa-lg"></i> Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/services"><i class="fas fa-map-marked fa-lg"></i> Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact"><i class="fas fa-phone fa-lg"></i> Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <main class="container">
   <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-   
+    <p>Welcome to the <%= title %> page</p>
+    <p id="firstP">1111111</p>
+    <button id="clickMe">Click Me</button>
+  </main>
+   <footer>
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+      <div class="container-fluid">
+        <h4>&copy; Copyright 2021.</h4>
+      </div>
+    </nav>
+   </footer>
     <!--Javascript Section-->
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
